force-app/main/default/objects/Case/fields/Warehouse_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>