force-app/main/default/objects/Case/fields/Website_App__c.field-meta.xml
<CustomField>
    <fullName>Website_App__c</fullName>
    <label>Website- App</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>