force-app/main/default/objects/Case/fields/WH_Team_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>WH_Team_Member_Name__c</fullName>
    <formula>Warehouse_Team_Member__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WH Team Member Name</label>
    <type>Text</type>
</CustomField>