force-app/main/default/objects/Case/recordTypes/Inbound_Case.recordType-meta.xml
<RecordType>
    <fullName>Inbound_Case</fullName>
    <active>true</active>
    <businessProcess>Support Processes</businessProcess>
    <label>Inbound Case</label>
</RecordType>