force-app/main/default/objects/Case/recordTypes/Outbound_Case.recordType-meta.xml
<RecordType>
    <fullName>Outbound_Case</fullName>
    <active>true</active>
    <businessProcess>Support Processes</businessProcess>
    <label>Outbound Case</label>
</RecordType>