force-app/main/default/objects/Case/recordTypes/Social_Media.recordType-meta.xml
<RecordType>
    <fullName>Social_Media</fullName>
    <active>true</active>
    <businessProcess>Support Processes</businessProcess>
    <label>Social Media</label>
</RecordType>