force-app/main/default/objects/Case/validationRules/Case_Close_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Close_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISCHANGED(Status)),NOT(ISCHANGED(OwnerId)),ISPICKVAL(Status,&quot;Closed&quot;))</errorConditionFormula>
    <errorMessage>Can&apos;t edit a closed case. Re-open to edit</errorMessage>
</ValidationRule>