force-app/main/default/objects/Case/validationRules/Disable_editing_when_closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Disable_editing_when_closed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Closed&quot;),
    NOT(Is_Re_Opened__c)
)</errorConditionFormula>
    <errorMessage>Can&apos;t edit a closed case. Re-Open to edit</errorMessage>
</ValidationRule>