force-app/main/default/objects/Case/validationRules/Validation_For_Communcation_Mode.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_For_Communcation_Mode</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Closed&quot;),
  ISPICKVAL(Communication_Mode__c ,&quot;&quot;)     
)</errorConditionFormula>
    <errorDisplayField>Communication_Mode__c</errorDisplayField>
    <errorMessage>Please select a Communication Mode (Email, Call, or Chat) before closing the case.</errorMessage>
</ValidationRule>