force-app/main/default/objects/Case/validationRules/Validation_For_Email_Replied_CheckBox.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_For_Email_Replied_CheckBox</fullName>
    <active>false</active>
    <description>Validation For Email Replied CheckBox When Ticket is Closing</description>
    <errorConditionFormula>AND(ISPICKVAL(Status, &quot;Closed&quot;),NOT( Email_Replied__c))</errorConditionFormula>
    <errorDisplayField>Email_Replied__c</errorDisplayField>
    <errorMessage>Please mark the &apos;Email Replied&apos; checkbox before closing the ticket.</errorMessage>
</ValidationRule>