force-app/main/default/objects/Case/listViews/Admin_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Admin_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Admin Queue</label>
    <queue>Admin_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>