force-app/main/default/objects/Case/listViews/All_cases.listView-meta.xml
<ListView>
    <fullName>All_cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>showFlags__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Refund_WH_Team_Status__c</columns>
    <columns>Created_Time__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Last_Response_External__c</columns>
    <columns>Last_Response__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.PRIORITY</columns>
    <filterScope>Everything</filterScope>
    <label>All cases</label>
</ListView>