force-app/main/default/objects/Case/listViews/Bulk_Upload_Cases.listView-meta.xml
<ListView>
    <fullName>Bulk_Upload_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Refund_WH_Team_Status__c</columns>
    <columns>Last_Response__c</columns>
    <columns>Last_Response_External__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Bulk Upload</value>
    </filters>
    <label>Bulk Upload Cases</label>
</ListView>