force-app/main/default/objects/Case/listViews/Bulk_Upload_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Bulk_Upload_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Refund_WH_Team_Status__c</columns>
    <columns>Last_Response__c</columns>
    <columns>Last_Response_External__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Bulk Upload Queue</label>
    <queue>Bulk_Upload_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>