force-app/main/default/objects/Case/listViews/Email_Case_Case.listView-meta.xml
<ListView>
    <fullName>Email_Case_Case</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Refund_WH_Team_Status__c</columns>
    <columns>Last_Response__c</columns>
    <columns>Last_Response_External__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Inbound Email,Outbound Email</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>Email</value>
    </filters>
    <label>Email Case</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>