force-app/main/default/objects/Case/listViews/FollowUp_Case_For_Warehouse_Team.listView-meta.xml
<ListView>
    <fullName>FollowUp_Case_For_Warehouse_Team</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Refund_WH_Team_Status__c</columns>
    <columns>Last_Response__c</columns>
    <columns>Last_Response_External__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>isFollowUp__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Follow Up Case For WH/Refund Team</label>
    <sharedTo>
        <role>WearHouse</role>
    </sharedTo>
</ListView>