force-app/main/default/objects/Case/listViews/Instagram_Comments_Mention_Cases.listView-meta.xml
<ListView>
    <fullName>Instagram_Comments_Mention_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Post__c</field>
        <operation>equals</operation>
        <value>Comment</value>
    </filters>
    <label>Instagram Comments Mention Cases</label>
</ListView>