force-app/main/default/objects/Case/listViews/Instagram_Dm_Messages.listView-meta.xml
<ListView>
    <fullName>Instagram_Dm_Messages</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>User_Name__c</columns>
    <columns>Post_Id__c</columns>
    <columns>CASES.SUBJECT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Post__c</field>
        <operation>equals</operation>
        <value>DM</value>
    </filters>
    <label>Instagram Dm Messages</label>
</ListView>