force-app/main/default/objects/Case/listViews/Instagram_Hashtag_Posts.listView-meta.xml
<ListView>
    <fullName>Instagram_Hashtag_Posts</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Post_Id__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>POST_URL__c</columns>
    <columns>Type_of_Post__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Post__c</field>
        <operation>equals</operation>
        <value>Hashtags</value>
    </filters>
    <label>Instagram Hashtag Posts</label>
</ListView>