force-app/main/default/objects/Case/listViews/Instagram_Mention_Cases.listView-meta.xml
<ListView>
    <fullName>Instagram_Mention_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>POST_URL__c</columns>
    <columns>Post_Id__c</columns>
    <columns>Type_of_Post__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.ORIGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Post__c</field>
        <operation>equals</operation>
        <value>Mentions</value>
    </filters>
    <label>Instagram Mention Cases</label>
</ListView>