force-app/main/default/objects/Case/listViews/Instagram_Reel_Cases.listView-meta.xml
<ListView>
    <fullName>Instagram_Reel_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>POST_URL__c</columns>
    <columns>Post_Id__c</columns>
    <columns>Type_of_Post__c</columns>
    <columns>Created_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Post__c</field>
        <operation>equals</operation>
        <value>Reel</value>
    </filters>
    <label>Instagram Reel Cases</label>
</ListView>