force-app/main/default/objects/Case/listViews/Marketing_Team_Cases.listView-meta.xml
<ListView>
    <fullName>Marketing_Team_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Refund_WH_Team_Status__c</columns>
    <columns>Last_Response__c</columns>
    <columns>Last_Response_External__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Profile_Name__c</field>
        <operation>equals</operation>
        <value>Marketing</value>
    </filters>
    <label>Marketing Team Cases</label>
</ListView>